# mcp-agent-bus

./: .gitignore  CHANGELOG.md  README.md  README_en.md  RELEASE_CHECKLIST.md  RUN_RECORD.md  SCOPE.md  TODO.md  pyproject.toml  run_smoke.sh
.trae/skills/mcp-agent-bus/: SKILL.md
docs/: codex_mcp_config_example.toml  dashboard.md  github_release_notes.md  skill_installation_guide.md  solo_skill_submission_draft.md  solo_two_dialogue_test_plan.md
mcp_agent_bus/: __init__.py  bus.py  cli.py  dashboard.py  dashboard_data.py  server.py
scripts/: smoke_two_agents.py
tests/: test_bus.py  test_dashboard.py  test_mcp_stdio.py
